@@ -53,6 +53,14 @@ view "internal" {
 		file "clone.db";
 		allow-update { any; };
 	};
+
+	zone "inline" {
+		type master;
+		file "internal/inline.db";
+		key-directory "internal";
+		auto-dnssec maintain;
+		inline-signing yes;
+	};
 };
 
 view "external" {
@@ -72,5 +80,13 @@ view "external" {
 		in-view internal;
 		forward only;
 		forwarders { 10.53.0.5; };
+	};
+
+	zone "inline" {
+		type master;
+		file "external/inline.db";
+		key-directory "external";
+		auto-dnssec maintain;
+		inline-signing yes;
 	};
 };
