@@ -1,3 +1,6 @@
+3967.	[test]		Add test for inlined signed zone in multiple views
+			with different DNSKEY sets. [RT #35759]
+
 3966.	[bug]		Missing dns_db_closeversion call in receive_secure_db.
 			[RT #35746]
 
